Correction in datetime format and image in manifesto printout

--- a/api/templates/manifest_print.html
+++ b/api/templates/manifest_print.html
@@ -35,7 +35,7 @@
                         <tr>
                             <td style="width:30%;">
                                 <div class="col-md-3">
-                                    <img src="{% static 'img/airpost_logo.png' %}" alt="Airpost Xpress" class="img-fluid" id="nav_img_">
+                                    <img src="{% static '\img\airpost_logo_1.png' %}" alt="Airpost Xpress" class="img-fluid" id="nav_img_">
                                 </div>
                             </td>
                             <td style="font-weight: normal;" class="text-center"><b>{{ user_details.branch_name }}</b><br>{{ user_details.address}}</td>
