Correction in DRS page to show total qty and in network zone to location

--- a/api/templates/base.html
+++ b/api/templates/base.html
@@ -158,18 +158,18 @@
             <div class="col-md-3">
                 <h5 class="link-text-decor pt-2">Contact</h5>
                 <hr class="bold-lines">
-                <a href="mailto:airpostxpress@gmail.com" class="link-text-decor">Email: support.airpostxpress@gmail.com</a>
+                <a href="mailto:airpostxpress@gmail.com" class="link-text-decor">Email: airpostxpress@gmail.com</a>
             </div>
             <div class="col-md-3">
                 <h5 class="link-text-decor pt-3">Have a business enquiry?</h5>
                 <hr class="bold-lines">
                 <p class="link-text-decor">Monday to Friday: 10:30 AM To 07:30 PM</p>
                 <p class="link-text-decor">Saturday: 10:30 AM To 07:00 PM</p>
-                <p class="link-text-decor">For more information, please drop a mail.</p>
+                <p class="link-text-decor">For more information, Please drop a mail.</p>
             </div>
             <br>
             <p class="link-text-decor text-center sm_in_sm">&#169; Copyright {{ today_date }} Airpost Xpress Courier Services - All Rights Reserved.</p>
-            <p class="link-text-decor text-center sm_in_sm">Design and developed by: Nayan</p>
+            <p class="link-text-decor text-center sm_in_sm">Designed and developed by: Nayan</p>
         </div>
     </div>
     <!-- <hr class="mt-1">  -->
