--- a/api/templates/drs_generate.html
+++ b/api/templates/drs_generate.html
@@ -68,7 +68,7 @@
         <div class="card mt-4">
             <div class="col-12">
                 <div class="card-header">
-                    DRS Details
+                    <p>DRS Details - <b>Total documents: <span id="rowCount"></span></p></b>
                 </div>
                 <div class="card-body">
                     <div class="table-responsive">
