--- a/api/templates/network.html
+++ b/api/templates/network.html
@@ -36,7 +36,7 @@
                     <h4 class="card-title color_for_ro"><b>AIRPOST XPRESS</b></h4>
                     <!-- <h4 class="font-weight-bold blue-text"></h4> -->
                     <p class="card-text">
-                        <h5><b>Zone: {{ office.zone }} </b></h5>
+                        <h5><b>Location: {{ office.zone }} </b></h5>
 
                         <!-- <b>Zone:</b> {{ office.zone }} -->
                         <b>C/o:</b> {{ office.branch_name }}
@@ -127,7 +127,7 @@
                     <!-- <h4 class="font-weight-bold blue-text"></h4> -->
                     <p class="card-text">
                         <!-- <h5><b>Zone:</b> {{ office.zone }}</h5> -->
-                        <h5><b>Zone: {{ office.zone }}</b></h5>
+                        <h5><b>Location: {{ office.zone }}</b></h5>
                         <b>C/o:</b> {{ office.branch_name }}
                         <br><b>Area name:</b> {{ office.area_name }}
                         <br><b>State: </b>{{ office.state }}
