Add text type in main tracking button

--- a/api/templates/index.html
+++ b/api/templates/index.html
@@ -9,7 +9,7 @@
             {% csrf_token %}
             <div class="mb-3">
                 <label for="trackingdetails" class="form-label" id="tracking_name">TRACK YOUR SHIPMENT</label>
-                <input type="number" class="form-control" id="trackingdetails" aria-describedby="emailHelp" name="tracking_number" required>
+                <input type="text" class="form-control" id="trackingdetails" aria-describedby="emailHelp" name="tracking_number" required>
             </div>
             <button type="button" class="btn btn-success" id="tracking_btn">Track shipment</button>
             <!-- </form> -->
