--- a/api/templates/bookings.html
+++ b/api/templates/bookings.html
@@ -186,7 +186,7 @@
     <!-- Advance filters -->
     <div class="row text-center">
         <hr>
-        <h3 class="text-center"><b>Advance Filters</b></h3>
+        <h5 class="text-center"><b>Filter in booked shipments</b></h5>
         <form method="post" class="g-3" id="datewise_form">
             {% csrf_token %}
             <div class="row justify-content-evenly mx-2 border border-1 p-2">
@@ -266,6 +266,10 @@
                 $("#cnotenumber").val(new_c_note);
             }
         }
+        $("#party").on("change", function() {
+            var new_val = $(this).find("option:selected").text();
+            $("#sender_name").val(new_val);
+        });
     });
 </script>
 
